# rust-smart-default

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: example.rs
src/: body_impl.rs  default_attr.rs  lib.rs  util.rs
tests/: tests.rs
