[package]
name = "smart-default"
description = "Rust custom-derive macro for Default with more control on the fields"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT"
repository = "https://github.com/idanarye/rust-smart-default"
documentation = "https://idanarye.github.io/rust-smart-default/"
readme = "README.md"
keywords = ["default"]

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
