[package]
name = "smart-default"
description = "Rust custom-derive macro for Default with more control on the fields"
version = "0.5.2"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT"
repository = "https://github.com/idanarye/rust-smart-default"
documentation = "https://idanarye.github.io/rust-smart-default/"
readme = "README.md"
keywords = ["default"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.15.26", features = ["full"]}
quote = "0.6.9"
proc-macro2 = "0.4.20"
