[package]
name = "smart-default"
description = "Rust custom-derive macro for Default with more control on the fields"
version = "0.6.0"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT"
repository = "https://github.com/idanarye/rust-smart-default"
documentation = "https://idanarye.github.io/rust-smart-default/"
readme = "README.md"
keywords = ["default"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "1", features = ["full"]}
quote = "1"
proc-macro2 = "1"
